tests/error/type_errors/subscript_bad_item.err
Guppy compilation failed. Error in file $FILE:10

8:     @guppy(module)
9:     def foo(xs: array[int, 42]) -> int:
10:        return xs[1.0]
                     ^^^
GuppyTypeError: Expected argument of type `int`, got `float`
